--- a/dev/rllibjs.html
+++ b/dev/rllibjs.html
@@ -61,8 +61,9 @@
 
             font-size: 200%;
         }
-        .menu__item__element{
-            
+        .menu__item__element p{
+            padding: 0px 0px 0px 0px;
+            margin: 0px 0px 0px 0px;
         }
         @font-face {
             font-family: "Ubuntu";
@@ -126,18 +127,19 @@
 
         /* Create two equal columns that sits next to each other */
         .paragraph .paragraph__content .paragraph__content__grid .row .column {
-            flex: 25%;
+            flex: 40%;
             padding: 0 4px;
         }
 
         .paragraph .paragraph__content .paragraph__content__grid .column .img_container img {
             margin-top: 8px;
-            max-width: 50%;
+            max-width: 80%;
             height:auto;
 
             opacity: 1;
             transition: .5s ease;
             backface-visibility: hidden;
+            border: 4px solid black;
         }
 
         .img_container{
@@ -173,21 +175,10 @@
                                   </div>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="column">
-                                <div class="img_container">
-                                    <img src="src/images/flat_world_env.png" />
-                                  </div>
-                            </div>
-                            <div class="column">
-                                <div class="img_container">
-                                    <img src="src/images/hunters_env.png" />
-                                  </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
+            <!--Next Paragraph-->
             <div class="paragraph">
                 <div class="paragraph__title">
                     Algorithms
@@ -204,7 +195,7 @@
                     Examples sdfuihsodfgosdfygvusodf
                 </div>
             </div>
-
+            <!--COMMENT-->
             <div class="paragraph">
                 <div class="paragraph__title">
                     Environments
@@ -250,7 +241,9 @@
                         Environments
                     </div>
                     <div class="menu__item__element">
-                        Three.js
+                        <p>Flat Eat World</p>
+                        <p>Browser, Node.js</p>
+                        <p>Three.js</p>
                     </div>
                 </div>
             </div>
